Fixed CSS to better display on mobile, tablet, and web. Also fix displaying null as text

--- a/AlingedTiles/css/style.css
+++ b/AlingedTiles/css/style.css
@@ -1,21 +1,22 @@
 .divstyle {
-    height: 80px; 
-    width: 100px;
+    height: 75px; 
+    width: 80px;
     font-family: 'Open Sans', "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
     color: white;
     text-align: center; 
     overflow: hidden;   
     float: left;
-    margin-right: 10px;
+    margin-right: 3px;
 }
 
 .spanstyle {
-    font-size: 40px;
+    font-size: 35px;
     font-weight: bold;
 }
 
 
 .descriptionstyle {
     display: block;
+    font-size: 13px;
     line-height: 1.6;
 }
